Fixed layout bug

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@ html {
 	font-size: 16px;
 }
 body {
-	background-color: var(--bg-color-1);
+	background-color: var(--bg-color-2);
 }
 * {
 	color: var(--text-color-1);
